--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,20 +8,20 @@
   url = "#about"
   weight = 10
 
-[[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 30
+#[[main]]
+#  name = "Posts"
+#  url = "#posts"
+#  weight = 30
 
 [[main]]
   name = "Projects"
   url = "#projects"
   weight = 20
 
-[[main]]
-  name = "Publications"
-  url = "#publications"
-  weight = 40
+#[[main]]
+#  name = "Publications"
+#  url = "#publications"
+#  weight = 40
   
 #[[main]]
 #  name = "Courses"
